Update author in Venture1 version post

--- a/_posts/2026-02-14-Venture1版本.md
+++ b/_posts/2026-02-14-Venture1版本.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      ""
-author:     "Hux"
+title:      "wenture b0.0.0.0.1下载版本选择"
+author:     "ChenZiyan"
 header-style: text
 tags:
   - 被夹
